@@ -6,6 +6,7 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
       proceeding with Release.gpg to avoid the false impression of a still
       trusted repository by a (still present) old InRelease file.
       Thanks to Simon Ruderich for reporting this issue! (CVE-2012-0214)
+    - add Debug::pkgAcqArchive::NoQueue to disable package downloading
   * apt-pkg/deb/dpkgpm.cc:
     - chroot if needed before dpkg --assert-multi-arch
     - ensure that dpkg binary doesn't have the chroot-directory prefixed
@@ -87,7 +88,7 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
     - Not automatically installed during dist-upgrade
     - No higher score for installation ordering
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 06 Mar 2012 10:52:00 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 06 Mar 2012 17:57:22 +0100
 
 apt (0.8.16~exp12) experimental; urgency=low
 
